--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha -r ts-node/register tests/3*.ts"
+    "test": "mocha -r ts-node/register tests/*.ts",
+    "build": "tsc -d --outDir dist",
+    "pack": "tsc -d --outDir dist && webpack"
   },
   "repository": {
     "type": "git",
@@ -29,12 +31,14 @@
     "@types/node": "^14.14.6",
     "assert": "^2.0.0",
     "mocha": "^8.2.1",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "@types/web3": "^1.2.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
-    "web3": "^1.3.0"
+    "web3": "^1.3.0",
+    "webpack": "^5.4.0"
   }
 }
