--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "lib": ["es2016", "dom", "es5"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "exclude": [
     "node_modules",
@@ -16,6 +17,7 @@
   ],
   "include": [
     "src/*",
+    "src/bancor/abi/*",
     "index.ts"
   ]
 }
