Add build on install

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cic-client",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Typescript libraries for building CIC client applications",
   "main": "dist/index.js",
   "directories": {
@@ -10,7 +10,8 @@
     "test": "mocha -r ts-node/register tests/*.ts",
     "build": "tsc -d --outDir dist",
     "pack": "tsc -d --outDir dist && webpack",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
