--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha -r ts-node/register tests/*.ts",
+    "test": "mocha -r ts-node/register tests/2_*.ts",
     "build": "tsc -d --outDir dist",
-    "pack": "tsc -d --outDir dist && webpack",
+    "pack": "node_modules/typescript/bin/tsc -d --outDir dist && webpack",
     "clean": "rm -rf dist",
     "prepare": "npm run build"
   },
@@ -37,12 +37,12 @@
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
-    "@types/web3": "^1.2.2",
     "bn": "^1.0.5",
     "lru-cache": "^6.0.0",
+    "path-browserify": "^1.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
-    "web3": "^1.3.0",
+    "web3": "^1.3.1",
     "webpack": "^5.4.0"
   }
 }
